--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: jekyll-theme-midnight
+remote_theme: pages-themes/time-machine@v0.2.0
+plugins:
+- jekyll-remote-theme
+
+
+# old theme jekyll-theme-midnight 
