--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [The title of your site]
+title: [52 (0x34)]
 description: [A short description of your site's purpose]
 
 # title: [52 (0x34)]
