--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [52 (0x34)]
-description: [A short description of your site's purpose]
+description: [(Name Stolen) Blog]
 
 # title: [52 (0x34)]
 # description: [[NameStolen] Blog]
