--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [52 (0x34)]
-description: [(Name Stolen) Blog]
+title: [(Name Stolen) Blog]
+description: [52 (0x34)]
 
 # title: [52 (0x34)]
 # description: [[NameStolen] Blog]
